# weixin-agent-rs

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.es.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
examples/: acp.rs  anthropic.rs  echo.rs  openai.rs
src/: bot.rs  error.rs  lib.rs
src/agent/: acp.rs  mod.rs
src/api/: client.rs  config_cache.rs  mod.rs  types.rs
src/auth/: accounts.rs  login_qr.rs  mod.rs
src/cdn/: aes_ecb.rs  cdn_transfer.rs  cdn_url.rs  download.rs  mod.rs  upload.rs
src/media/: mime.rs
src/messaging/: inbound.rs  mod.rs  process.rs  send.rs  send_media.rs
src/monitor/: mod.rs  runner.rs
src/runtime/: mod.rs
src/storage/: mod.rs  state_dir.rs  sync_buf.rs
src/util/: markdown.rs  mod.rs  random.rs
