[package]
name = "wechat_rs_sdk"
version = "0.1.0"
edition = "2024"
description = "WeChat iLink bot Rust SDK with pluggable agent interface"
license = "MIT"
repository = "https://github.com/tianrking/weixin-agent-rs"

[package.metadata.deb]
name = "wechat-agent"
maintainer = "tianrking <tian.r.king@gmail.com>"
copyright = "2026, tianrking"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utils"
priority = "optional"
extended-description = "Cross-platform WeChat iLink bot CLI with pluggable ACP/OpenAI/Anthropic agents."
assets = [
  ["target/release/wechat-agent", "usr/bin/wechat-agent", "755"],
  ["README.md", "usr/share/doc/wechat-agent/README.md", "644"],
  ["README.en.md", "usr/share/doc/wechat-agent/README.en.md", "644"],
  ["README.es.md", "usr/share/doc/wechat-agent/README.es.md", "644"],
]

[dependencies]
async-trait = "0.1"
aes = "0.8"
ecb = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
bytes = "1"
hex = "0.4"
md5 = "0.8"
mime_guess = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
qrcode = "0.14"
